--- a/ve/Model/SectionModel.tt
+++ b/ve/Model/SectionModel.tt
@@ -11,4 +11,5 @@
 <# Generate("SectionModel", 
 	F("MediaFileModel", "MediaFile"),
 	F("TimeSpan", "Start"),
-	F("TimeSpan", "End"));  #>
+	F("TimeSpan", "End"),
+	F("Brush", "BackgroundBrush"));  #>
