--- a/ve/Controls/Graph.xaml
+++ b/ve/Controls/Graph.xaml
@@ -13,7 +13,8 @@
 
   <DockPanel LastChildFill="True">
     <!-- zoom bar -->
-    <Slider DockPanel.Dock="Right" Minimum="0.1" Maximum="50" Value="{Binding $parent[UserControl].Zoom}" Orientation="Vertical" />
+    <Slider DockPanel.Dock="Right" Minimum="0.05" Maximum="100" Value="{Binding $parent[UserControl].Zoom}" Orientation="Vertical" 
+            ToolTip.Tip="Zoom level" />
     
     <StackPanel Orientation="Vertical">
       <Panel Height="30"/>
