more safe pointers, trim works, crop added, keyframe models

--- a/ve/Model/KeyFrameInstanceModel.tt
+++ b/ve/Model/KeyFrameInstanceModel.tt
@@ -8,7 +8,6 @@
 
 <#@ include file="modelbasetemplate.tt" #>
 
-<# Generate("SectionModel",  null,
-	F("MediaFileModel", "MediaFile"),
-	F("TimeSpan", "Start"),
-	F("TimeSpan", "End"));  #>
+<# Generate("KeyFrameInstanceModel<T>", "where T: IKeyFrameInterpolation<T>",
+	F("T", "InnerObject"),
+	F("TimeSpan", "Timestamp"));  #>
